# robot-mpc-wbc-locomotion

./: .gitignore  PROJECT_STATUS.md  PROJECT_STATUS.md.save  README.md  README.md.bak_stage14_2  requirements.txt
assets/: stage00_minimal_leg.xml
docs/: CONTROL_ARCHITECTURE_OVERVIEW.md  CPP_CONTROL_ALGORITHMS.md  DEMO_VIDEO_MANIFEST.md  FINAL_PACKAGE_WITH_DEMO_VIDEO_MANIFEST.md  ONE_PAGE_TECHNICAL_REPORT.md  REPORT_READY_CLAIMS_AND_LIMITATIONS.md  REPORT_READY_FIGURES.md  REPORT_READY_METRICS_TABLE.md  REPORT_READY_PACKAGE_MANIFEST.md  REPORT_READY_RESULTS.md  SIMULATION_ONLY_RESULTS_SUMMARY.md  SIMULATION_ONLY_SCOPE.md  STAGE06_QP_FORCE_TO_ACTUATOR_TORQUE.md  STAGE06_QP_TORQUE_SUPPORT_TEST.md  STAGE06_SUMMARY_AND_STAGE07_INTERFACE.md  STAGE07_CONSOLIDATED_SUMMARY_AFTER_SWING.md  STAGE07_CONTACT_MODE_SEQUENCE_RAMP_TEST.md  STAGE07_CONTACT_MODE_TORQUE_RAMP_CHECK.md  STAGE07_CONTACT_MODE_TRANSITION_CHECK.md  STAGE07_CONTACT_SCHEDULE_WBC_QP.md  STAGE07_CONTACT_SCHEDULE_WBC_SCALED_SUPPORT_TEST.md  STAGE07_FINAL_SUMMARY.md  STAGE07_FINAL_UPDATE_AFTER_MODE_SEQUENCE.md  STAGE07_FULL_WBC_BASE_VERTICAL_ACCEL_TASK_QP.md  STAGE07_FULL_WBC_DYNAMICS_QP.md  STAGE07_FULL_WBC_FINAL_UPDATE.md  STAGE07_FULL_WBC_STANCE_CONSTRAINT_QP.md  STAGE07_FULL_WBC_SUMMARY.md  STAGE07_FULL_WBC_SWING_ACCEL_TASK_QP.md  STAGE07_FULL_WBC_TORQUE_RECONSTRUCTION_AND_RAMP_CHECK.md  STAGE07_FULL_WBC_TORQUE_SEQUENCE_SUPPORT_TEST.md  STAGE07_GAIT_PHASE_SCHEDULER_PROTO.md  STAGE07_MINIMAL_WBC_TORQUE_QP.md  STAGE07_ONLINE_FULL_WBC_PLUS_SWING_JOINT_TRACKING_SWEEP.md  STAGE07_ONLINE_FULL_WBC_SCHEDULER_RECOMMENDED_RUN.md  STAGE07_ONLINE_FULL_WBC_SCHEDULER_STABILITY_SWEEP.md  STAGE07_ONLINE_FULL_WBC_STEP_LOOP_PROTO.md  STAGE07_ONLINE_FULL_WBC_WITH_SCHEDULER_PROTO.md  STAGE07_ONLINE_LOCOMOTION_CONSOLIDATED_SUMMARY.md  STAGE07_ONLINE_STANCE_PD_WBC_PLUS_SWING_PD_RECOMMENDED_TEST.md  (+146 more)
docs/interview/: INTERVIEW_3MIN_SYSTEM_EXPLANATION.md
results/logs_sample/: stage00_env.txt  stage00_go1_scene_torque_log.csv  stage00_go1_torque_log.csv  stage00_torque_log.csv  stage03_standing_pd_kp80_kd2.csv  stage03_standing_pd_log.csv  stage04_gait_swing_foothold_log.csv  stage04_open_loop_trot_pd_conservative_log.csv  stage04_open_loop_trot_pd_log.csv  stage05_centroidal_z_mpc.csv  stage05_contact_schedule_force_qp.csv  stage05_horizon_force_qp.csv  stage05_standing_contact_force_qp.csv  stage06_force_sign_sanity_check.csv  stage06_qp_force_to_actuator_torque.csv  stage06_qp_force_to_torque.csv  stage06_qp_torque_support_test_log.csv  stage06_qp_torque_support_test_summary.csv  stage07_contact_mode_sequence_ramp_test_log.csv  stage07_contact_mode_sequence_ramp_test_summary.csv  stage07_contact_mode_torque_ramp_check.csv  stage07_contact_mode_transition_check.csv  stage07_contact_schedule_wbc_qp.csv  stage07_contact_schedule_wbc_scale_sweep.csv  stage07_contact_schedule_wbc_scaled_support_test_log.csv  stage07_contact_schedule_wbc_scaled_support_test_summary.csv  stage07_contact_schedule_wbc_support_test_log.csv  stage07_contact_schedule_wbc_support_test_summary.csv  stage07_full_wbc_base_accel_task_qp.csv  stage07_full_wbc_base_vertical_accel_task_qp.csv  stage07_full_wbc_dynamics_qp.csv  stage07_full_wbc_stance_constraint_qp.csv  stage07_full_wbc_swing_accel_task_qp.csv  stage07_full_wbc_torque_ramp_check.csv  stage07_full_wbc_torque_reconstruction_check.csv  stage07_full_wbc_torque_sequence_support_test_log.csv  stage07_full_wbc_torque_sequence_support_test_summary.csv  (+459 more)
ros2_ws/src/robot_mpc_wbc_cpp_controller/: CMakeLists.txt  package.xml
ros2_ws/src/robot_mpc_wbc_cpp_controller/include/robot_mpc_wbc_cpp_controller/: torque_safety.hpp  zero_torque_dry_run.hpp
ros2_ws/src/robot_mpc_wbc_cpp_controller/include/robot_mpc_wbc_cpp_controller/control/: gait_scheduler.hpp  swing_trajectory.hpp  torque_safety_filter.hpp
ros2_ws/src/robot_mpc_wbc_cpp_controller/launch/: disabled_controller.launch.py
ros2_ws/src/robot_mpc_wbc_cpp_controller/src/: disabled_controller_node.cpp  disabled_controller_node.cpp.stage1220b_r2_pre_r3.bak  torque_safety_contract_check.cpp  zero_torque_dry_run_contract_check.cpp
ros2_ws/src/robot_mpc_wbc_cpp_controller/src/control/: gait_scheduler.cpp  swing_trajectory.cpp  torque_safety_filter.cpp
ros2_ws/src/robot_mpc_wbc_cpp_controller/test/: test_control_algorithms.cpp
ros2_ws/src/robot_mpc_wbc_cpp_interface/: CMakeLists.txt  package.xml
ros2_ws/src/robot_mpc_wbc_cpp_interface/launch/: interface_mirror.launch.py
ros2_ws/src/robot_mpc_wbc_cpp_interface/src/: interface_mirror_node.cpp
scripts/: record_stage13_demo_screen.sh  stage00_inspect_go1_model.py  stage00_torque_control_demo.py  stage02_check_pinocchio_jacobian.py  stage02_compare_foot_velocity.py  stage02_compare_full_foot_velocity.py  stage02_compare_joint_order.py  stage02_compare_mujoco_pinocchio_fk.py  stage02_compare_mujoco_pinocchio_jacobian.py  stage02_inspect_pinocchio_model.py  stage02_validate_pinocchio_fk.py  stage03_standing_pd_demo.py  stage04_gait_swing_foothold_demo.py  stage04_open_loop_trot_pd_demo.py  stage05_centroidal_z_mpc.py  stage05_contact_schedule_force_qp.py  stage05_horizon_force_qp.py  stage05_standing_contact_force_qp.py  stage06_force_sign_sanity_check.py  stage06_jacobian_transpose_torque.py  stage06_qp_force_to_torque.py  stage06_qp_torque_support_test.py  stage07_compare_wbc_variants.py  stage07_contact_mode_sequence_ramp_test.py  stage07_contact_mode_torque_ramp_check.py  stage07_contact_mode_transition_check.py  stage07_contact_schedule_wbc_qp.py  stage07_contact_schedule_wbc_scale_sweep.py  stage07_contact_schedule_wbc_scaled_support_test.py  stage07_contact_schedule_wbc_support_test.py  stage07_full_wbc_base_accel_task_qp.py  stage07_full_wbc_base_vertical_accel_task_qp.py  stage07_full_wbc_dynamics_qp.py  stage07_full_wbc_stance_constraint_qp.py  stage07_full_wbc_swing_accel_task_qp.py  stage07_full_wbc_torque_ramp_check.py  stage07_full_wbc_torque_reconstruction_check.py  stage07_full_wbc_torque_sequence_support_test.py  stage07_gait_phase_scheduler_proto.py  stage07_minimal_wbc_torque_qp.py  (+161 more)
(+12 files in other folders)
