<?xml version="1.0"?>
<package format="3">
  <name>robot_mpc_wbc_cpp_controller</name>
  <version>0.0.1</version>
  <description>Disabled-by-default C++ controller skeleton. No torque publisher is created.</description>

  <maintainer email="2645694430@qq.com">zanshi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
